--- a/src/React/src/App.css
+++ b/src/React/src/App.css
@@ -1,4 +1,27 @@
+body {
+    background-image: url("../public/runners.jpg");
+}
+
 .App {
-    margin: 1rem;
     font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+}
+
+.bar {
+    background-color: rgba(220, 220, 220, 0.7);
+    color: orangered;
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 150%);
+    
+    text-align: center;
+    padding: 0 1em 1em 1em;
+    
+    border-radius: 1em;
+}
+
+a {
+    color: orangered;
 }
